with console output